# HomeControl-Box

./: README.md
homecontrolbox/lock-system/lock_box/: CMakeLists.txt
homecontrolbox/lock-system/lock_box/main/: CMakeLists.txt  lcd1602.c  lcd1602.h  main.c  mqtt.c  mqtt.h  rfid_read.c  rfid_read.h  ssl.pem  utils.c  utils.h  wifi_setup.c
homecontrolbox/main_box/main/: CMakeLists.txt  app_main.c  mqtt.c  mqtt.h  wifi_setup.c  wifi_setup.h
homecontrolbox/main_box/main/output/: led_signals.c  led_signals.h  relays_func.c
homecontrolbox/main_box/main/sensors/: configure_adc.c  configure_adc.h  read_sensors.c  sensor.c
homecontrolbox/main_box/main/sensors/IR/: interpret_cmd.c  interpret_cmd.h  ir_sensor.c
homecontrolbox/rpi_hub/project/: listen_task.py  run_hub.py  run_ngrok.py
homecontrolbox/sensors_box_type/main/: CMakeLists.txt  app_main.c  mqtt.c  mqtt.h  wifi_setup.c
homecontrolbox/sensors_box_type/main/output/: led_signals.c  led_signals.h
homecontrolbox/sensors_box_type/main/sensors/: configure_adc.c  configure_adc.h  read_sensors.c  read_sensors.h  sensor.c  sensor.h
homecontrolbox/sensors_box_type/main/sensors/IR/: interpret_cmd.c  ir_sensor.c  ir_sensor.h
homecontrolbox/smart_outlet/: README.md  acces_point_mode.py  main.py  mqtt.py
